# serializer version: 1
# name: test_binary_sensor_setup_and_states[binary_sensor.gatus_server_core_backend-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.gatus_server_core_backend',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'core backend',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'core backend',
    'platform': 'gatus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567890abcdef1234567890abcdef_core_backend',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_setup_and_states[binary_sensor.gatus_server_core_backend-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      'duration_raw': 95000000,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gatus Server core backend',
      'hostname': 'backend.local',
      'status': 500,
      'success': False,
      'timestamp': '2026-06-29T13:00:01Z',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.gatus_server_core_backend',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor_setup_and_states[binary_sensor.gatus_server_frontend-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.gatus_server_frontend',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'frontend',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'frontend',
    'platform': 'gatus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567890abcdef1234567890abcdef_core_frontend',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_setup_and_states[binary_sensor.gatus_server_frontend-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'body': 'custom response payload',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      'duration_raw': 45000000,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gatus Server frontend',
      'hostname': 'frontend.local',
      'status': 200,
      'success': True,
      'timestamp': '2026-06-29T13:00:00Z',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.gatus_server_frontend',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
